[package]
name = "pebbles-game-io"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gmeta = { version = "1" }
gstd = { version = "1" }
scale-info = { version = "2", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
